// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetUnitsNearLocation tests input validation should throw without a input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error: \\"input\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without a lat arg in the location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error: \\"input.location.lng\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without a lng arg in the location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error: \\"input.location.lat\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without a location input 1`] = `"GetUnitsNearLocationQueryVariables Object Validation Error: \\"input.location\\" is required"`;

exports[`GetUnitsNearLocation tests input validation should throw without valid location input 1`] = `[Error: GraphQL error: GetUnitsNearLocationQueryVariables Object Validation Error: "input.location.lat" must be greater than or equal to -90, "input.location.lng" must be less than or equal to 180]`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance with direct handler call 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "__typename": "Location",
      "lat": 47.48992,
      "lng": 19.046135,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "chain_1_id",
  "currency": "EUR",
  "distance": 0,
  "groupId": "group_c1_1_id",
  "id": "unit_03",
  "name": "Test unit #unit_1_id",
  "openingHours": "09:00 - 22:00",
  "paymentModes": Array [
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "CASH",
      "name": "Cash",
    },
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "CARD",
      "name": "Card",
    },
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "INAPP",
      "name": "Stripe",
    },
  ],
  "style": Object {
    "colors": Object {
      "__typename": "ChainStyleColors",
      "backgroundDark": "#fff",
      "backgroundLight": "#fff",
      "borderDark": "#fff",
      "borderLight": "#fff",
      "disabled": "#fff",
      "highlight": "#fff",
      "indicator": "#fff",
      "textDark": "#fff",
      "textLight": "#fff",
    },
    "images": null,
  },
}
`;

exports[`GetUnitsNearLocation tests should return all the units in geoUnitsFormat ordered by distance with remove appsync api call 1`] = `
Object {
  "__typename": "GeoUnit",
  "address": Object {
    "__typename": "Address",
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "__typename": "Location",
      "lat": 47.48992,
      "lng": 19.046135,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "chain_1_id",
  "currency": "EUR",
  "distance": 0,
  "groupId": "group_c1_1_id",
  "id": "unit_03",
  "name": "Test unit #unit_1_id",
  "openingHours": "09:00 - 22:00",
  "paymentModes": Array [
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "CASH",
      "name": "Cash",
    },
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "CARD",
      "name": "Card",
    },
    Object {
      "__typename": "PaymentMode",
      "caption": null,
      "method": "INAPP",
      "name": "Stripe",
    },
  ],
  "style": Object {
    "__typename": "ChainStyle",
    "colors": Object {
      "__typename": "ChainStyleColors",
      "backgroundDark": "#fff",
      "backgroundLight": "#fff",
      "borderDark": "#fff",
      "borderLight": "#fff",
      "disabled": "#fff",
      "highlight": "#fff",
      "indicator": "#fff",
      "textDark": "#fff",
      "textLight": "#fff",
    },
    "images": null,
  },
}
`;
